...
        android:layout_height="wrap_content"
        android:text="@string/heightLabel"
        android:textAlignment="center"
        android:textSize="40dp" />

    <EditText
        android:id="@+id/height"
        style="@style/MyEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginRight="140dp"
        android:layout_marginTop="20dp"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:text="Save" />

</LinearLayout>
