<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SetGoalActivity" android:orientation="vertical">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:text="Accept"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/set_goal_accept" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/setup_goal_recomanded_text"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.498"/>
        <TextView
                android:text="333"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:id="@+id/recommanded_goal"
                android:textSize="27sp"
                app:layout_constraintStart_toEndOf="@+id/setup_goal_recomanded_text"
                android:layout_marginStart="15dp"
                app:layout_constraintTop_toTopOf="@+id/setup_goal_recomanded_text"
                app:layout_constraintBottom_toBottomOf="@+id/setup_goal_recomanded_text"/>
        <TextView
                android:text="Recommended: "
                android:layout_width="wrap_content"
                android:layout_height="34dp" android:id="@+id/setup_goal_recomanded_text"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="50dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="35dp"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_margin="20dp">

        <TextView
                android:text="Set your own:"
                android:layout_width="wrap_content"
                android:layout_height="34dp" android:id="@+id/setup_goal_recomanded_text2"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/goal_edit_text"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/setup_goal_recomanded_text2" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:text="Set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/set_goal_set" app:layout_constraintStart_toStartOf="@+id/goal_edit_text"
                app:layout_constraintEnd_toEndOf="@+id/goal_edit_text" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/goal_edit_text"/>
    </android.support.constraint.ConstraintLayout>
    <Button
            android:text="Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setup_goal_cancel_button"
            tools:layout_editor_absoluteY="378dp" tools:layout_editor_absoluteX="121dp"/>
</LinearLayout>