<resources>
    <string name="app_name">Person Best</string>
    <string name="steps_today_text">Steps Today</string>
    <string name="steps_left_text">Steps Left:</string>
    <string name="goal_text">Goal:</string>
    <string name="btn_update_steps">Update Steps</string>
    <string name="btn_launch_progress_chart">Progress Chart</string>
    <string name="title_activity_progress_chart">ProgressChart</string>
    <string name="step_counter_parcel_key">STEP_COUNTER_PARCEL</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_friend_list">FriendListActivity</string>
    <string name="title_activity_friend_progress">FriendProgress</string>
    <string name="test_mode">test_mode</string>
    <string name="test_cloud">test_cloud</string>
    <string name="test_local">test_local</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="web_client_id">998924189833-s9u9gl4nkb8sc1ciepofjtvbshf7pe6q.apps.googleusercontent.com</string>
    <!-- Strings for message and activity dialog-->
    <string name="title_select_action">Select action</string>
    <string name="msg_select_action">Please select an action</string>
    <string name="message_btn">Send message</string>
    <string name="activity_btn">See activity</string>
    <string name="cancel">Cancel</string>
    <!-- Strings for activity chart-->
    <string name="encmsg">Send encouragement</string>
    <string name="weekly_chart">Weekly Chart</string>
    <string name="monthly_chart">Monthly Chart</string>
    <string name="title_select_summary">Select summary</string>
    <string name="msg_select_summary">Please select a summary</string>

</resources>
