...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:gravity="center_horizontal"
                                                   tools:context=".LoginActivity" android:id="@+id/linearLayout">

    <TextView
            android:text="Person Best"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/textView2" android:textAlignment="center"
            android:textSize="36sp" android:paddingTop="50dp"
...
            android:layout_marginTop="250dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="50dp"
            android:layout_marginBottom="350dp"
            app:layout_constraintBottom_toBottomOf="parent" android:visibility="gone" android:layout_height="100dp"
    />
    <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="85dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="400dp"
...
